objects/Mapping_Child_Obj__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_Parent_Obj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mapping Parent Obj</label>
        <referenceTo>Mapping_Parent_Obj__c</referenceTo>
        <relationshipLabel>Mapping Child Objs</relationshipLabel>
        <relationshipName>Mapping_Child_Objs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Obj_Name__c</fullName>
        <label>Obj Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Obj_Field_Name__c</fullName>
        <label>Parent Obj Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Name__c</fullName>
        <label>Target Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Type_Format__c</fullName>
        <label>Target Field Type Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Type__c</fullName>
        <label>Target Field Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Mapping Child Obj</label>
    <nameField>
        <label>Mapping Child Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Child Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>